Finished contacts participation

--- a/Participations/WPF_ContactList/WPF_ContactList.csproj
+++ b/Participations/WPF_ContactList/WPF_ContactList.csproj
@@ -6,4 +6,10 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Update="contacts.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
